--- a/mupattern-web/index.html
+++ b/mupattern-web/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bitcount+Prop+Single:wght@400;700&family=Bitcount:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bitcount+Prop+Single:wght@400;700&family=Bitcount+Single:wght@400;700&family=Bitcount:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <title>MuPattern</title>
